--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil:opsz,wght@10..72,100..900&family=Bungee+Spice&family=Dancing+Script:wght@400..700&family=Jaini&family=Special+Gothic&display=swap" rel="stylesheet">
-  <link rel="icon" href="MarkMI_icon.png" type="image/png">
+  <link rel="icon" href="Mhttps://raw.githubusercontent.com/NishanthAcharya/MarkMI/5dc06803fa002550c04b724dcb1e0f4abe3240d6/MarkMI_icon.png" type="image/png">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -229,7 +229,7 @@
   <div class="topcontainer">
     <div class="one">
       <div class="mlogo">
-        <img id="imglogo" src="/MarkMI_icon.png" alt="logo">
+        <img id="imglogo" src="https://raw.githubusercontent.com/NishanthAcharya/MarkMI/5dc06803fa002550c04b724dcb1e0f4abe3240d6/MarkMI_icon.png" alt="logo">
       </div>
       <div class="brand">
         <h1>MarkMI</h1>
